# rot26

./: .gitignore  Cargo.toml  README.md  rot26.h
src/: c_api.rs  lib.rs
